@@ -451,108 +451,6 @@ Scalar TruncatedDistribution::getThresholdRealization() const
   return thresholdRealization_;
 }
 
-/* Lower bound accessor */
-void TruncatedDistribution::setLowerBound(const Scalar lowerBound)
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::setLowerBound is deprecated, use setBound..");
-  if ((bounds_.getFiniteUpperBound()[0]) && (lowerBound > bounds_.getUpperBound()[0])) throw InvalidArgumentException(HERE) << "Error: the lower bound must be strictly less than the upper bound, here lower bound=" << lowerBound << " and upper bound=" << bounds_.getUpperBound()[0];
-  cdfLowerBound_ = distribution_.computeCDF(Point(1, lowerBound));
-  if (cdfLowerBound_ >= cdfUpperBound_) throw InvalidArgumentException(HERE) << "Error: the truncation interval does not contain a non-empty part of the support of the distribution";
-  pdfLowerBound_ = distribution_.computePDF(Point(1, lowerBound));
-  bounds_.setLowerBound(Point(1, lowerBound));
-  bounds_.setFiniteLowerBound(BoolCollection(1, true));
-  computeRange();
-}
-
-Scalar TruncatedDistribution::getLowerBound() const
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::getLowerBound is deprecated, use getRange.");
-  return bounds_.getLowerBound()[0];
-}
-
-
-/* Upper bound accessor */
-void TruncatedDistribution::setUpperBound(const Scalar upperBound)
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::setUpperBound is deprecated, use setBound.");
-  if ((bounds_.getFiniteLowerBound()[0]) && (upperBound < bounds_.getLowerBound()[0])) throw InvalidArgumentException(HERE) << "Error: the upper bound must be strictly greater than the lower bound, here upper bound=" << upperBound << " and lower bound=" << bounds_.getLowerBound()[0];
-  cdfUpperBound_ = distribution_.computeCDF(Point(1, upperBound));
-  if (cdfUpperBound_ <= cdfLowerBound_) throw InvalidArgumentException(HERE) << "Error: the truncation interval does not contain a non-empty part of the support of the distribution";
-  pdfUpperBound_ = distribution_.computePDF(Point(1, upperBound));
-  bounds_.getUpperBound()[0] = upperBound;
-  bounds_.getFiniteUpperBound()[0] = true;
-  isAlreadyComputedMean_ = false;
-  isAlreadyComputedCovariance_ = false;
-  isAlreadyCreatedGeneratingFunction_ = false;
-  computeRange();
-}
-
-Scalar TruncatedDistribution::getUpperBound() const
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::getUpperBound is deprecated, use setBound.");
-  return bounds_.getUpperBound()[0];
-}
-
-/* Lower bound finite flag accessor */
-void TruncatedDistribution::setFiniteLowerBound(const Bool finiteLowerBound)
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::setFiniteLowerBound is deprecated, use setBound.");
-  // A stange case: the new flag tells that the bound is finite, but no finite previous value has been given
-  if (finiteLowerBound && !bounds_.getFiniteLowerBound()[0]) throw InvalidArgumentException(HERE) << "Error: cannot set a finite flag on a non finite previous value";
-  // If we switched from a finite value to an infinite one, update everything
-  if (!finiteLowerBound)
-  {
-    bounds_.getLowerBound()[0] = -SpecFunc::MaxScalar;
-    pdfLowerBound_ = 0.0;
-    cdfLowerBound_ = 0.0;
-    bounds_.getFiniteLowerBound()[0] = false;
-  }
-  isAlreadyComputedMean_ = false;
-  isAlreadyComputedCovariance_ = false;
-  isAlreadyCreatedGeneratingFunction_ = false;
-  computeRange();
-}
-
-Bool TruncatedDistribution::getFiniteLowerBound() const
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::getFiniteLowerBound is deprecated, use getRange.");
-  return bounds_.getFiniteLowerBound()[0];
-}
-
-/* Upper bound finite flag accessor */
-void TruncatedDistribution::setFiniteUpperBound(const Bool finiteUpperBound)
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::setFiniteUpperBound is deprecated, use setBound.");
-  // A strange case: the new flag tells that the bound is finite, but no finite previous value has been given
-  if (finiteUpperBound && !bounds_.getFiniteUpperBound()[0]) throw InvalidArgumentException(HERE) << "Error: cannot set a finite flag on a non finite previous value";
-  // If we switched from a finite value to an infinite one, update everything
-  if (!finiteUpperBound)
-  {
-    bounds_.getUpperBound()[0] = SpecFunc::MaxScalar;
-    pdfUpperBound_ = 0.0;
-    cdfUpperBound_ = 1.0;
-    bounds_.getFiniteUpperBound()[0] = false;
-  }
-  isAlreadyComputedMean_ = false;
-  isAlreadyComputedCovariance_ = false;
-  isAlreadyCreatedGeneratingFunction_ = false;
-  computeRange();
-}
-
-Bool TruncatedDistribution::getFiniteUpperBound() const
-{
-  if (getDimension() > 1) throw NotYetImplementedException(HERE) << "Only available for univariate distributions";
-  LOGWARN("TruncatedDistribution::getFiniteUpperBound is deprecated, use getRange.");
-  return bounds_.getFiniteUpperBound()[0];
-}
-
 void TruncatedDistribution::setBounds(const Interval & bounds)
 {
   if (bounds_ != bounds)
