@@ -14,6 +14,7 @@
  * Remove deprecated Process::getDimension, getSpatialDimension methods
  * Removed deprecated CovarianceModel::getDimension, getSpatialDimension, getSpatialCorrelation, setSpatialCorrelation methods
  * Removed deprecated SpectralModel::getDimension, getSpatialDimension, getSpatialCorrelation methods
+ * Removed deprecated TruncatedDistribution single bound accessors
 
 === Python module ===
 
